# selene

./: .gitignore  README.md  ida_symbols.py
apollo-crt/: apollo-crt.cpp  apollo-crt.sln  apollo-crt.vcxproj
apollo-linker/: linker.cpp  linker.sln  linker.vcxproj  linker.vcxproj.filters
apollo-linker/object/: code_gen.cpp  collection.cpp  collection.hpp  comdat.cpp  comdat.hpp  opt_ref.cpp  primitives.cpp  primitives.hpp  reference_counting.hpp
apollo-linker/transform/: attribute_discovery.cpp  attribute_discovery.hpp  attribute_normalization.cpp  attribute_normalization.hpp  auto_mode_switch.cpp  auto_mode_switch.hpp  cleanup.cpp  cleanup.hpp  dyn_relocs.cpp  dyn_relocs.hpp  logo.cpp  (+19 more)
apollo-toolset/: Config.xml  Toolset.props  Toolset.targets  install.bat
apollo-vm/: apollo-vm.cpp  apollo-vm.sln  apollo-vm.vcxproj  apollo-vm.vcxproj.filters
flash/: flash.sln  flash.vcxproj  flash.vcxproj.filters  main.cpp
pdblib/: .gitignore  CMakeLists.txt  PdbLib.sln  PdbLib.vcxproj  PdbLib.vcxproj.filters  README.md
pdblib/includes/pdblib/: cvconsts.h  cvinfo.h  dbi.hpp  msf.hpp  pdb.hpp
sdkgen/: sdkgen.sln  sdkgen.vcxproj  sdkgen.vcxproj.filters
selene/: crt.cpp  main.cpp  selene.sln  selene.vcxproj  selene.vcxproj.filters
shared/: leh.hpp  ntpp.hpp  shared.sln  shared.vcxitems  shared.vcxitems.filters  tinyjit.hpp  trace_snapshot.hpp  xstd_options.hpp
xt/: .gitignore  CMakeLists.txt  README.md  func_typedefs.h  xt.sln  xt.vcxproj  xt.vcxproj.filters
xt/includes/xt/: config.hpp  event.hpp  event_graph.hpp  program_analysis.hpp
xt/lib/: program_analysis.cpp
(+28860 files in other folders)
